Updated dependency on git

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "category": "Unity",
   "type": "tool",
   "dependencies": {
-    "com.alelievr.node-graph-processor": "0.2.0",
+    "com.alelievr.node-graph-processor": "https://github.com/alelievr/NodeGraphProcessor.git#upm",
     "com.unity.shadergraph": "6.9.1"
   },
   "hideInEditor": false
